Added a benchmark for FYL2X instruction vs std::log() and std::log2() .

--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -305,6 +305,7 @@
   </ItemGroup>
   <ItemGroup>
     <MASM Include="SRFlushCache.asm" />
+    <MASM Include="SRLog2Mul.asm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SRPlatformDll.def" />
