Started implementing CENormPriorsSubtaskMax .

--- a/ProbQA/SRPlatform/SRPlatform.vcxproj
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj
@@ -235,6 +235,7 @@
     <ClInclude Include="Interface\SRLogStream.h" />
     <ClInclude Include="Interface\SRMacros.h" />
     <ClInclude Include="Interface\SRMath.h" />
+    <ClInclude Include="Interface\SRMaxSizeof.h" />
     <ClInclude Include="Interface\SRMemPool.h" />
     <ClInclude Include="Interface\SRMessageBuilder.h" />
     <ClInclude Include="Interface\SRMinimalTask.h" />
