--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -199,6 +199,10 @@
     <ClInclude Include="CECreateQuizOperation.decl.h" />
     <ClInclude Include="CECreateQuizOperation.fwd.h" />
     <ClInclude Include="CECreateQuizOperation.h" />
+    <ClInclude Include="CENormPriorsSubtaskMax.h" />
+    <ClInclude Include="CENormPriorsTask.decl.h" />
+    <ClInclude Include="CENormPriorsTask.fwd.h" />
+    <ClInclude Include="CENormPriorsTask.h" />
     <ClInclude Include="CEQuiz.fwd.h" />
     <ClInclude Include="CEQuiz.decl.h" />
     <ClInclude Include="CEQuiz.h" />
@@ -239,6 +243,7 @@
   <ItemGroup>
     <ClCompile Include="BaseCpuEngine.cpp" />
     <ClCompile Include="CECreateQuizOperation.cpp" />
+    <ClCompile Include="CENormPriorsSubtaskMax.cpp" />
     <ClCompile Include="CETrainSubtaskAdd.cpp" />
     <ClCompile Include="CEUpdatePriorsSubtaskMul.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
