--- a/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
+++ b/ProbQA/SRPlatform/SRPlatform.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClInclude Include="BucketerSubtaskSum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\SRNumHelper.h">
+      <Filter>Header Files\Interface</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
